# Ship

./: .eslintignore  .gitignore  ARCHITECTURE.md  BRIEF.md  CLAUDE.md  Cargo.toml  Justfile  README.md  SPEC.md  STATUS.md  TASKS.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vibe,js
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
.ship/: .gitignore  config.toml  ship.toml
.ship/agents/: README.md  mcp.toml  permissions.toml  skill-library-strategy.md
.ship/agents/presets/: default.toml
.ship/specs/: plugin-runtime-vnext.md  ui-vision---production-roadmap.md
apps/web/: package.json  vite.config.ts
crates/cli/: Cargo.toml
crates/logic/: Cargo.toml
crates/mcp/: Cargo.toml
crates/runtime/: Cargo.toml
crates/ui/: components.json  package.json  pnpm-lock.yaml  vite.config.ts
crates/ui-kit/: package.json
docs/: agent-configuration.md  agent-rules-contract.md  feature-process-detail.md  state-persistence-audit.md
example/: README.md
example/projects-e2e/: Cargo.toml  README.md  feature-matrix.md
example/projects-e2e/e2e/: project-features.sh
example/projects-e2e/tests/: agent_config.rs  branch_config.rs  entity_cli.rs  git_hook.rs  git_workflow.rs  project_registry.rs  workflow.rs  workspace_lifecycle.rs
example/projects-e2e/tests/helpers/: mod.rs
example/stories/: README.md
scripts/: audit-agent-skills.sh  import-skill-to-ship.sh  migration-smoke.sh  setup.sh  test-isolated.sh
src/: index.js
src/commands/: project.js
src/core/: project.js
src/mcp/: server.js
src/ui/: server.js
(+432 files in other folders)
