[workspace]
members = [
    "crates/runtime",
    "crates/modules/project",
    "crates/modules/workflow",
    "crates/modules/agents",
    "crates/modules/git",
    "crates/cli",
    "crates/mcp",
    "crates/plugins/time-tracker",
    "crates/plugins/ghost-issues",
    "crates/ui/src-tauri",
]
resolver = "2"
